[package]
name = "ultraphonic"
version = "0.1.0"
authors = ["Alex Nordin <alex_mc_nordin@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ultraphonic"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
ag-lcd = "0.2.0"
itoa = "1.0.9"
ryu = "1.0.15"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.5.2"
features = ["atmega328p"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
